--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </svg>
           </a>
 
-          <a class="social" href="https://www.linkedin.com/in/your-profile" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+          <a class="social" href="https://www.linkedin.com/in/washtdev" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
             <!-- LinkedIn SVG -->
             <svg viewBox="0 0 24 24" aria-hidden="true" fill="currentColor" width="18" height="18">
               <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8.5h4v14h-4v-14zM9 8.5h3.78v2h.05c.53-1 1.83-2 3.77-2 4.03 0 4.78 2.65 4.78 6.09V22.5h-4v-6.55c0-1.56-.03-3.56-2.17-3.56-2.17 0-2.5 1.7-2.5 3.45V22.5h-4v-14z"/>
